tests/base/invalid/Char_Invalid_1.whiley


char f(char c):
    return c + 1
